@startuml
'https://plantuml.com/class-diagram

abstract class House{
    + abstract void buildBase();
    + abstract void buildWall();
    + abstract void buildRoof();
    + void build();
}

class Client{
    + main();
}

class CommonBuilding{}

class TowerBuilding{}

House <|-- CommonBuilding
House <|-- TowerBuilding

CommonBuilding <.. Client
TowerBuilding <.. Client

@enduml